--- a/Prelude-Part-IV.qmd
+++ b/Prelude-Part-IV.qmd
@@ -14,7 +14,9 @@ Part IV of the book is by far the most theoretical, focusing as it does on the t
 > what we do.*  
 > - Arthur Wellesley, 1st Duke of Wellington
 
-I am told that quote above came about as a consequence of a carriage ride across the countryside.[^IV-1] He and his companion, J. W. Croker, were playing a guessing game, each trying to predict what would be on the other side of each hill. In every case it turned out that Wellesley was right and Croker was wrong. Many years later when Wellesley was asked about the game he explained that “the whole art of war consists in getting at what is on the other side of the hill”. Indeed, war is not special in this respect. All of life is a guessing game of one form or another, and getting by on a day to day basis requires us to make good guesses. So let’s play a guessing game of our own.
+I am told that quote above came about as a consequence of a carriage ride across the countryside.[^IV-1] He and his companion, J. W. Croker, were playing a guessing game, each trying to predict what would be on the other side of each hill. In every case it turned out that Wellesley was right and Croker was wrong. Many years later when Wellesley was asked about the game he explained that “the whole art of war consists in getting at what is on the other side of the hill”. Indeed, war is not special in this respect. All of life is a guessing game of one form or another, and getting by on a day to day basis requires us to make good guesses. So let’s play a guessing game of our own.[^translation-1]
+
+[^translation-1]: 譯註~譯者提供的簡化版故事。某位設計師為展覽製作一個能裝10,000顆球的巨大陶瓷瓶子，展覽告示宣稱瓶子裡有5,000顆白球和5,000顆彩色球，歡迎現場觀眾任意取球測試，看看告示是否為真。<br>有兩位觀眾W君與C君彼此約定測試方法，每次取出三顆球，逐次評估告示的真實性。<br>這天他們連續測試四次，每次取出的都是三顆白球。W君認為告示是錯的，C君認為還要繼續測試。你認為誰的主張是合理的？ 
 
 Suppose you and I are observing the Wellesley-Croker competition and after every three hills you and I have to predict who will win the next one, Wellesley or Croker. Let’s say that W refers to a Wellesley victory and C refers to a Croker victory. After three hills, our data set looks like this:
 
